--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bpmn-io/form-js-editor": "^1.7.1",
     "@bpmn-io/properties-panel": "^3.18.1",
-    "@material-ui/styles": "^4.11.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.15.10",
     "@mui/styles": "^5.15.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@seznam/compose-react-refs": "^1.0.6",
-    "@uiw/react-monacoeditor": "^3.6.0",
     "bpmn-js": "^17.0.2",
     "bpmn-js-properties-panel": "^5.11.1",
+    "bpmn-js-token-simulation": "^0.33.1",
     "camunda-bpmn-js-behaviors": "camunda/camunda-bpmn-js-behaviors#main",
     "camunda-bpmn-moddle": "^7.0.1",
     "camunda-dmn-moddle": "^1.3.0",
@@ -29,10 +30,11 @@
     "diagram-js-origin": "^1.4.0",
     "dmn-js": "^15.1.0",
     "dmn-js-decision-table": "^15.1.0",
-    "dmn-js-properties-panel": "^3.2.1",
+    "dmn-js-properties-panel": "^3.3.0",
     "lucide-react": "^0.336.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-monaco-editor": "^0.55.0",
     "react-resizable-panels": "^2.0.9",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
